Updates the frontend-infra HTML

--- a/frontend-infra/src/index.html
+++ b/frontend-infra/src/index.html
@@ -4,29 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Fox Game</title>
-    <link rel="stylesheet" href="./sprites.css" />
-    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="inner"></div>
-      <div class="game day"></div>
-      <div class="fox hidden"></div>
-      <div class="poop-bag hidden"></div>
-      <div class="foreground rain"></div>
-      <div class="frame"></div>
-      <div class="modal inner">
-        Press the middle button to start`
-      </div>
-      <div class="btn left-btn"></div>
-      <div class="btn middle-btn"></div>
-      <div class="btn right-btn"></div>
-    </div>
-    <div class="icons">
-      <div class="icon highlited fish-icon"></div>
-      <div class="icon poop-icon"></div>
-      <div class="icon weather-icon"></div>
-    </div>
-    <script src="./init.js"></script>
+    <h1>Hello World!</h1>
   </body>
 </html>
